--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -33,6 +33,7 @@
 
     </br>
     <%= link_to 'Home', {:controller => "home", :action => "Index" } %>
+    <%= link_to 'Previous Orders', {:controller => "baskets", :action => "index" } %>
     <% else %>
     <%= link_to'Register', new_user_registration_path %> or
     <%= link_to'Sign in', new_user_session_path %>
