Added functionality of viewing saved order respective to particular user

--- a/app/views/storeinfos/index.html.erb
+++ b/app/views/storeinfos/index.html.erb
@@ -42,4 +42,5 @@
 <% if current_user.admin? %>
   <%= link_to 'Make new Admin', {:controller => "profiles", :action => "index" } %>
 <% end %>
-<%= link_to 'New Storeinfo', new_storeinfo_path %>
+<%= link_to 'New Store', new_storeinfo_path %>
+<%= link_to 'Orders', {:controller => "baskets", :action => "showOrders" }  %>
