--- a/app/views/baskets/index.html.erb
+++ b/app/views/baskets/index.html.erb
@@ -1,30 +1,56 @@
+<!DOCTYPE html>
+<html>
+
+<head>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+</head>
+
 <p id="notice"><%= notice %></p>
 
-<h1>Baskets</h1>
+<h1 >Baskets</h1>
 
-
-<table>
-  <thead>
+    <% @baskets.each do |basket| %>
+  <table>
+    <tbody>
+    <thead>
     <tr>
       <th>Name</th>
       <th>Status</th>
       <th colspan="3"></th>
     </tr>
-  </thead>
-
-  <tbody>
-    <% @baskets.each do |basket| %>
+    </thead>
       <tr>
         <td><%= basket.name %></td>
         <td><%= basket.status %></td>
         <table>
-
+          <% basket.order.each do |id| %>
+            <% if id.include? "[" %>
+              <% id = id.tr("[", " ") %>
+            <% elsif id.include? "]" %>
+              <% id = id.tr("]", " ") %>
+            <% end %>
+            <tr>
+            <% product = Productinfo.find(OrderItem.find(id).productinfo_id) %>
+            <% branch = Branchinfo.find(product.branchinfo_id) %>
+            <% store = Storeinfo.find(branch.storeinfo_id) %>
+            <td style="width: 132px;"><%= image_tag(product.image_url.to_s, width: '20%', style: "width: 132px;") %></td>
+            <td><%= image_tag(store.image_url(:thumb).to_s) %></td>
+            <td><%= branch.branchname %></td>
+            <td><%= branch.address %></td>
+            <td><%= product.productname %></td>
+            <td><%= product.productprice %></td>
+            </tr>
+          <% end %>
         </table>
         </tr>
-    <% end %>
-  </tbody>
-</table>
-
+    </tbody>
+  </table>
+<% end %>
 <br>
 
 <%= link_to 'New Basket', new_basket_path %>
+
+</html>
