--- a/app/views/home/Index.html.erb
+++ b/app/views/home/Index.html.erb
@@ -1,3 +1,13 @@
+<!DOCTYPE html>
+<html>
+
+<head>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+</head>
+
 <h1>Search for your Product</h1>
 
 <%= simple_form_for :search, url: {:controller => "home", :action => "Index"},
@@ -67,8 +77,10 @@
       <% if store.user_id == current_user.id %>
         <% storeCreated = true %>
         <%= link_to 'Show Stores', {:controller => "storeinfos", :action => "index"} %>
+        <% if !current_order.id.nil? %>
         <%= link_to "#{current_order.order_items.size} items with a value of #{current_order.subtotal} EUR", carts_show_path %>
-        <% break %>
+        <% end %>
+          <% break %>
       <% end %>
     <% end %>
 
@@ -77,7 +89,11 @@
         <%= link_to 'Show Stores', {:controller => "storeinfos", :action => "index"} %>
       <% else %>
         <%= link_to 'Opened a New Store?', new_storeinfo_path %>
+        <% if !current_order.nil? %>
+          <%= link_to "#{current_order.order_items.size} items with a value of #{current_order.subtotal} EUR", carts_show_path %>
+        <% end %>
       <% end %>
     <% end %>
   <% end %>
 </div>
+</html>
