--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,12 +7,17 @@
 
     <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
+
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
   </head>
 
   <body>
   <% if user_signed_in? %>
     <div>Signed in as... <%= current_user.email %>
-      (<%= link_to'Sign out', destroy_user_session_path,:method => :delete%>)</div>
+      (<%= link_to'Sign out', destroy_user_session_path,:method => :delete %>)</div>
 
     <% @profileList = Profile.all %>
     <% profilePresent = false %>
@@ -37,6 +42,7 @@
     <% else %>
     <%= link_to'Register', new_user_registration_path %> or
     <%= link_to'Sign in', new_user_session_path %>
+    <% session.delete(:order_id) %>
   <% end %>
     <%= yield %>
 
