--- a/app/views/baskets/showOrders.html.erb
+++ b/app/views/baskets/showOrders.html.erb
@@ -1,14 +1,11 @@
 <h1>showOrders</h1>
 
 <% @basket.each do |basket| %>
-  <td><h5><%= basket.name %></h5></td>
-  <td><h5><%= basket.created_at %></h5></td>
   <% basket.order.each do |id| %>
     <% @id = id %>
-
     <% if @id.include? "[" %>
       <% @id = @id.tr("[", "") %>
-      <% end %>
+    <% end %>
     <% if @id.include? "]" %>
       <% @id = @id.tr("]", "") %>
     <% end %>
@@ -16,12 +13,21 @@
     <% product = Productinfo.find(OrderItem.find(@id).productinfo_id) %>
     <% branch = Branchinfo.find(product.branchinfo_id) %>
     <% store = Storeinfo.find(branch.storeinfo_id) %>
-    <td style="width: 132px;"><%= image_tag(product.image_url.to_s, width: '20%', style: "width: 132px;") %></td>
-    <td><%= image_tag(store.image_url(:thumb).to_s) %></td>
-    <td><%= branch.branchname %></td>
-    <td><%= branch.address %></td>
-    <td><%= product.productname %></td>
-    <td><%= OrderItem.find(@id).quantity %></td>
-    <td><%= product.productprice %></td>
+    <% if branch.id.to_i.eql? @branchId.to_i %>
+      <tr>
+        <td><%= Profile.where(user_id: current_user.id)[0].firstname %></td>
+        <td><%= basket.created_at %></td>
+        <td><%= basket.status %></td>
+      </tr>
+      <td style="width: 132px;"><%= image_tag(product.image_url.to_s, width: '20%', style: "width: 132px;") %></td>
+      <td><%= image_tag(store.image_url(:thumb).to_s) %></td>
+      <td><%= branch.branchname %></td>
+      <td><%= branch.address %></td>
+      <td><%= product.productname %></td>
+      <td><%= OrderItem.find(@id).quantity %></td>
+      <td><%= product.productprice %></td>
+    <% end %>
   <% end %>
+  </br>
+  </br>
 <% end %>
