--- a/app/views/user_mailer/order_email.html.erb
+++ b/app/views/user_mailer/order_email.html.erb
@@ -4,13 +4,13 @@
   <meta content='text/html; charset=UTF-8' http-equiv='Content-Type' />
 </head>
 <body>
-<h1>Welcome to example.com, <%= @user.email %></h1>
+<h1>Congratulations, <%= @user.firstname %>!</h1>
 <p>
-  You have successfully signed up to example.com,
-</p>
+  Your order has been successfully placed and is on your way! Please find below the summary of your order.
+  </p>
 <p>
-  To login to the site, just follow this link: <%= @url %>.
+  To make changes to this order, go to the link: <%= @url %>.
 </p>
-<p>Thanks for joining and have a great day!</p>
+<p>Thanks for placing the order and have a great day!</p>
 </body>
 </html>
