Order email and observer

--- a/app/views/user_mailer/order_email.html.erb
+++ b/app/views/user_mailer/order_email.html.erb
@@ -8,8 +8,13 @@
 <p>
   Your order has been successfully placed and is on your way! Please find below the summary of your order.
   </p>
+
 <p>
-  To make changes to this order, go to the link: <%= @url %>.
+  Basket name - <%= @basket.name %>
+</p>
+
+<p>
+    To make changes to this order, go to the link: <%= @url %>.
 </p>
 <p>Thanks for placing the order and have a great day!</p>
 </body>
