--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -42,7 +42,10 @@
     <% else %>
     <%= link_to'Register', new_user_registration_path %> or
     <%= link_to'Sign in', new_user_session_path %>
+    <%= link_to "Sign in with Facebook", user_facebook_omniauth_authorize_path %>
     <% session.delete(:order_id) %>
+    <%session.delete(current_user) %>
+
   <% end %>
     <%= yield %>
 
