--- a/app/views/home/Index.html.erb
+++ b/app/views/home/Index.html.erb
@@ -8,14 +8,22 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
 </head>
 
+<body>
+<div class ="container">
 <h1>Search for your Product</h1>
 
-<%= simple_form_for :search, url: {:controller => "home", :action => "Index"},
-                    method: "GET", html: { class: 'form-inline' } do |f| %>
-  <%= f.input :productname, input_html: {value: ""} %>
-  <%= f.submit "Search", class: "btn btn-primary" %>
-  <%= link_to "Clear", {:controller => "home", :action => "Index"} %>
-<% end %>
+<form class="form-inline my-2 my-lg-0">
+  <%= simple_form_for :search, url: {:controller => "home", :action => "Index"},
+                      method: "GET", html: { class: 'form-inline' } do |f| %>
+    <%= f.input :productname, input_html: {value: ""} %>
+    <div class="col-sm-6">
+      <%= f.submit "Search", class: "btn btn-primary" %>
+      <div class="btn btn-outline-success my-2 my-sm-0">
+        <%= link_to "Clear", {:controller => "home", :action => "Index"} %>
+      </div>
+    </div>
+  <% end %>
+</form>
 
 <% if @productList.present? == false%>
   <% @productList = @productSearch %>
@@ -53,21 +61,16 @@
 </br>
 
 <% if @productHash.present? %>
-<table>
-  <tr>
-    <th></th>
-    <th>Product Name</th>
-  </tr>
-  <% @productHash.each do |key, value| %>
-    <tr>
-      <td></td>
-      <td><%= key %></td>
-      <td><%= link_to'Show', {:controller => "compare", :action => "index",
-                              :pdName => key, :pdID => value } %></td>
-    </tr>
-  <% end %>
-</table>
-  <% end %>
+  <table class="table table-striped table-bordered" style="width: 50%">
+    <% @productHash.each do |key, value| %>
+      <tr>
+        <td style="width: 50%"><%= key %></td>
+        <td class="nav-item nav-link active" style="width: 50%"><%= link_to'Show', {:controller => "compare", :action => "index",
+                                                                                    :pdName => key, :pdID => value } %></td>
+      </tr>
+    <% end %>
+  </table>
+<% end %>
 
 <div>
   <% if current_user != nil %>
@@ -76,7 +79,9 @@
     <% for store in @storeList %>
       <% if store.user_id == current_user.id %>
         <% storeCreated = true %>
-        <%= link_to 'Show Stores', {:controller => "storeinfos", :action => "index"} %>
+        <div class = "btn btn-info">
+          <%= link_to 'Show Stores', {:controller => "storeinfos", :action => "index"} %>
+        </div>
         <% if !current_order.id.nil? %>
         <%= link_to "#{current_order.order_items.size} items with a value of #{current_order.subtotal} EUR", carts_show_path %>
         <% end %>
@@ -96,4 +101,6 @@
     <% end %>
   <% end %>
 </div>
+</div>
+</body>
 </html>
