--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,23 +1,30 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>Compare Grocery Prices</title>
-    <%= csrf_meta_tags %>
-    <%= csp_meta_tag %>
+<head>
+  <title>Compare Grocery Prices</title>
+  <%= csrf_meta_tags %>
+  <%= csp_meta_tag %>
 
-    <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
-    <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
+  <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
+  <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
 
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
-  </head>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+</head>
 
-  <body>
+<body>
+<div class ="container">
+  <nav class="navbar navbar-expand-lg navbar-light bg-light ">
   <% if user_signed_in? %>
-    <div>Signed in as... <%= current_user.email %>
-      (<%= link_to'Sign out', destroy_user_session_path,:method => :delete %>)</div>
+
+      <div class="col-sm-2 navbar-brand">
+        <%= link_to 'Home', {:controller => "home", :action => "Index" } %>
+      </div>
+      <div class="col-sm-2 navbar-brand">
+        <%= link_to 'Previous Orders', {:controller => "baskets", :action => "index" } %>
+      </div>
 
     <% @profileList = Profile.all %>
     <% profilePresent = false %>
@@ -26,30 +33,42 @@
       <% for profile in @profileList %>
         <% if profile.user_id == current_user.id %>
           <% profilePresent = true %>
+          <div class="col-sm-2 float-right">
           <%= link_to 'Update Your Profile', edit_profile_path(profile.id) %>
+          </div>
           <% break %>
         <% end %>
       <% end %>
 
       <% if profilePresent == false %>
+        <div class="col-sm-2 float-right">
         <%= link_to 'Update Your Profile', {:controller => "profiles", :action => "new", :user_id => current_user.id} %>
+        </div>
       <% end %>
     <% end %>
 
     </br>
-    <%= link_to 'Home', {:controller => "home", :action => "Index" } %>
-    <%= link_to 'Previous Orders', {:controller => "baskets", :action => "index" } %>
-    <% else %>
-    <%= link_to'Register', new_user_registration_path %> |
-    <%= link_to'Sign in', new_user_session_path %> |
-    <%= link_to "Login with Facebook", user_facebook_omniauth_authorize_path %>
+      <div class="col-sm-2 float-left">Signed in as... <%= current_user.email %>
+        (<%= link_to'Sign out', destroy_user_session_path,:method => :delete %>)
+      </div>
+  <% else %>
+
+      <div class="col-sm-2 navbar-brand">
+        <%= link_to'Register', new_user_registration_path %>
+      </div>
+      <div class="col-sm-2 navbar-brand">
+        <%= link_to'Sign in', new_user_session_path %>
+      </div>
+      <div class="col-sm-2 navbar-brand">
+        <%= link_to "Login with Facebook", user_facebook_omniauth_authorize_path %>
+      </div>
+    </nav>
 
     <% session.delete(:order_id) %>
     <%session.delete(current_user) %>
 
   <% end %>
-    <%= yield %>
-
-
+</div>
+  <%= yield %>
   </body>
 </html>
