--- a/app/views/baskets/edit.html.erb
+++ b/app/views/baskets/edit.html.erb
@@ -1,6 +1,20 @@
-<h1>Editing Basket</h1>
+<!DOCTYPE html>
+<html>
+
+<head>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+</head>
+
+<body>
+<div class ="container">
+  </br>
+
+  <h3 class="card-header">Editing Basket</h3>
 
 <%= render 'form', basket: @basket %>
-
-<%= link_to 'Show', @basket %> |
-<%= link_to 'Back', baskets_path %>
+</div>
+</body>
+</html>
