--- a/app/views/baskets/new.html.erb
+++ b/app/views/baskets/new.html.erb
@@ -1,5 +1,21 @@
-<h1>New Basket</h1>
+<!DOCTYPE html>
+<html>
 
-<%= render 'form', basket: @basket %>
+<head>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+</head>
 
-<%= link_to 'Back', baskets_path %>
+<body>
+<div class ="container">
+  </br>
+
+  <h3 class="card-header">New Basket</h3>
+
+  <%= render 'form', basket: @basket %>
+
+</div>
+</body>
+</html>
