--- a/app/views/carts/_carts_item.html.erb
+++ b/app/views/carts/_carts_item.html.erb
@@ -1,43 +1,60 @@
-<h1>Your Cart</h1>
+<!DOCTYPE html>
+<html>
 
-<% @odItems = OrderItem.where(order_id: session[:order_id]) %>
-<% @odItemIdArr = [] %>
-<% @odItems.each do |item| %>
-  <% @odItemIdArr.push(item.id.to_i) %>
-<% end %>
+<head>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+</head>
 
-<%= session[:order_id] %>
+<body>
+  </br>
 
-<table>
-  <% @order_items.each do |item| %>
-    <tr>
-      <% product = Productinfo.find(item.productinfo.id) %>
-      <% branch = Branchinfo.find(product.branchinfo_id) %>
-      <% store = Storeinfo.find(branch.storeinfo_id) %>
-      <td style="width: 132px;"><%= image_tag(product.image_url.to_s, width: '20%', style: "width: 132px;") %></td>
-      <td><%= image_tag(store.image_url(:thumb).to_s) %></td>
-      <td><%= branch.branchname %></td>
-      <td><%= branch.address %></td>
-      <td><%= item.productinfo.productname %></td>
-      <td><%= item.productinfo.productprice %></td>
-      <td>
-        <%= form_for item,  remote: true do |f| %>
-          <%= f.hidden_field :productinfo_id, :value => item.productinfo.id %>
-          <%= f.number_field :quantity, :value => item.quantity.to_i %>
-          <%= f.submit "Update Cart" %>
+  <div class="card-header row">
+    <h3 class="col-sm-4">Your Cart</h3>
+    <div class="col text-right">
+      <div class="btn alert alert-primary col-sm-4 float-right" style="float: right;">
+        <%= link_to "Save this order", {:controller => "baskets", :action => "new",
+                                        :odArr => @odItemIdArr}%>
+      </div>
+    </div>
+  </div>
 
-          <%= link_to "Remove Items", order_item_path(item), method: :delete, remote: true  %>
-        <% end %>
-      </td>
-    </tr>
-    <tr>
-      <td><b>Subtotal : <%= item.total %></b></td>
-    </tr>
+  <% @odItems = OrderItem.where(order_id: session[:order_id]) %>
+  <% @odItemIdArr = [] %>
+  <% @odItems.each do |item| %>
+    <% @odItemIdArr.push(item.id.to_i) %>
   <% end %>
-</table>
 
-<h3>Current cart total is <%= current_order.subtotal %></h3>
-<%= link_to "Save this order", {:controller => "baskets", :action => "new",
-                                :odArr => @odItemIdArr}%>
+  <table class="table table-striped table-bordered">
+    <% @order_items.each do |item| %>
+      <tr>
+        <% product = Productinfo.find(item.productinfo.id) %>
+        <% branch = Branchinfo.find(product.branchinfo_id) %>
+        <% store = Storeinfo.find(branch.storeinfo_id) %>
+        <td style="width: 132px;"><%= image_tag(product.image_url.to_s, width: '20%', style: "width: 132px;") %></td>
+        <td><%= image_tag(store.image_url(:thumb).to_s) %></td>
+        <td><%= branch.branchname %></td>
+        <td><%= branch.address %></td>
+        <td><%= item.productinfo.productname %></td>
+        <td><%= item.productinfo.productprice %></td>
+        <td>
+          <%= form_for item,  remote: true do |f| %>
+            <%= f.hidden_field :productinfo_id, :value => item.productinfo.id %>
+            <%= f.number_field :quantity, :value => item.quantity.to_i %>
+            <%= f.submit "Update Cart" %>
 
+            <%= link_to "Remove Items", order_item_path(item), method: :delete, remote: true  %>
+          <% end %>
+        </td>
+      </tr>
+      <tr>
+        <td><b>Subtotal : <%= item.total %></b></td>
+      </tr>
+    <% end %>
+  </table>
+
+  <h3>Current cart total is <%= current_order.subtotal %> EURO</h3>
+</body>
 
