--- a/app/views/home/Index.html.erb
+++ b/app/views/home/Index.html.erb
@@ -9,8 +9,9 @@
 </head>
 
 <body>
+</br>
 <div class ="container">
-  <h1>Search for your Product</h1>
+  <h1 class="card-header">Search for your Product</h1>
 
   <form class="form-inline my-2 my-lg-0">
     <%= simple_form_for :search, url: {:controller => "home", :action => "Index"},
@@ -33,6 +34,8 @@
     <table class="table table-striped table-bordered" style="width: 50%">
       <tr>
         <th></th>
+        <th></th>
+        <th></th>
         <th>Product Name</th>
         <th>Store Name</th>
         <th>Product Price</th>
@@ -43,9 +46,12 @@
 
       <% for product in @productList %>
         <tr>
+          <% branch = Branchinfo.find(product.branchinfo_id) %>
+          <% store = Storeinfo.find(branch.storeinfo_id) %>
           <td><%= image_tag(product.image_url(:thumb).to_s) %></td>
           <td><%= product.productname %></td>
-          <td><%= Branchinfo.find(product.branchinfo_id).branchname %></td>
+          <td><%= image_tag(store.image_url(:thumb).to_s) %></td>
+          <td><%= branch.branchname %></td>
           <td><%= product.productprice %></td>
           <td><%= link_to'Show', {:controller => "productinfos", :action => "show",
                                   :id => product.id, :branchinfo_id => product.branchinfo_id}%></td>
@@ -70,7 +76,7 @@
       <% @productHash.each do |key, value| %>
         <tr>
           <td style="width: 50%"><%= key %></td>
-          <td class="nav-item nav-link active" style="width: 50%"><%= link_to'Show', {:controller => "compare", :action => "index",
+          <td class="nav-item nav-link" style="width: 50%"><%= link_to'Show', {:controller => "compare", :action => "index",
                                                                                       :pdName => key, :pdID => value } %></td>
         </tr>
       <% end %>
@@ -84,24 +90,36 @@
       <% for store in @storeList %>
         <% if store.user_id == current_user.id %>
           <% storeCreated = true %>
-          <div class = "btn btn-info">
-            <%= link_to 'Show Stores', {:controller => "storeinfos", :action => "index"} %>
-          </div>
-          <% if !current_order.id.nil? %>
-            <%= link_to "#{current_order.order_items.size} items with a value of #{current_order.subtotal} EUR", carts_show_path %>
-          <% end %>
-          <% break %>
+          <div class="row">
+            <div class = "alert alert-primary col-sm-4">
+              <%= link_to 'Show Stores', {:controller => "storeinfos", :action => "index"} %>
+            </div>
+            <% if !current_order.id.nil? %>
+              <div class="alert alert-success col-sm-4" style="width: 50%">
+                <%= link_to "#{current_order.order_items.size} items with a value of #{current_order.subtotal} EUR", carts_show_path %>
+              </div>
+              </div>
+            <% end %>
+            <% break %>
         <% end %>
       <% end %>
 
       <% if storeCreated == false %>
         <% if current_user.admin? %>
-          <%= link_to 'Show Stores', {:controller => "storeinfos", :action => "index"} %>
+          <div class = "alert alert-primary">
+            <%= link_to 'Show Stores', {:controller => "storeinfos", :action => "index"} %>
+          </div>
         <% else %>
-          <%= link_to 'Opened a New Store?', new_storeinfo_path %>
-          <% if !current_order.nil? %>
-            <%= link_to "#{current_order.order_items.size} items with a value of #{current_order.subtotal} EUR", carts_show_path %>
-          <% end %>
+          <div class="row">
+            <div class = "alert alert-primary col-sm-4">
+              <%= link_to 'Opened a New Store?', new_storeinfo_path %>
+            </div>
+            <% if !current_order.nil? %>
+              <div class="alert alert-success col-sm-4">
+                <%= link_to "#{current_order.order_items.size} items with a value of #{current_order.subtotal} EUR", carts_show_path %>
+              </div>
+              </div>
+            <% end %>
         <% end %>
       <% end %>
     <% end %>
