--- a/app/views/carts/_carts_item.html.erb
+++ b/app/views/carts/_carts_item.html.erb
@@ -13,12 +13,6 @@
 
   <div class="card-header row">
     <h3 class="col-sm-4">Your Cart</h3>
-    <div class="col text-right">
-      <div class="btn alert alert-primary col-sm-4 float-right" style="float: right;">
-        <%= link_to "Save this order", {:controller => "baskets", :action => "new",
-                                        :odArr => @odItemIdArr}%>
-      </div>
-    </div>
   </div>
 
   <% @odItems = OrderItem.where(order_id: session[:order_id]) %>
@@ -55,6 +49,14 @@
     <% end %>
   </table>
 
+  <div class="row">
   <h3>Current cart total is <%= current_order.subtotal %> EURO</h3>
+  <div class="col text-right">
+    <div class="btn alert alert-primary col-sm-4 float-right" style="float: right;">
+      <%= link_to "Save this order", {:controller => "baskets", :action => "new",
+                                      :odArr => @odItemIdArr}%>
+    </div>
+  </div>
+  </div>
 </body>
 
