--- a/app/views/branchinfos/_form.html.erb
+++ b/app/views/branchinfos/_form.html.erb
@@ -1,3 +1,15 @@
+<!DOCTYPE html>
+<html>
+
+<head>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+</head>
+
+<body>
+</br>
 <%= form_for([@branchinfo]) do |f| %>
   <% if @branchinfo.errors.any? %>
     <div id="error_explanation">
@@ -8,49 +20,57 @@
       </ul>
     </div>
   <% end %>
-  <div class="field">
-
-    <% if @storeinfo.present? %>
-
-
-      <%= f.hidden_field :storeinfo_id, :value => @storeinfo.id %>
-
-      <%= f.hidden_field :user_id, :value => current_user.id %>
-
-
-    <p><%= f.label :Branchname %>
-      <%= f.text_field :branchname, :value => @storeinfo.storename %>
-    </p>
-  </div>
-    <% end %>
-  <div>
-    <p><%= f.label :Address %>
-
+  <% if @storeinfo.present? %>
+    <%= f.hidden_field :storeinfo_id, :value => @storeinfo.id %>
+    <%= f.hidden_field :user_id, :value => current_user.id %>
+    <div class="row">
+      <div class="col-sm-2 col-form-label">
+        <%= f.label :Branchname %>
+      </div>
+      <div class="col-sm-2 col-form-label">
+        <%= f.text_field :branchname, :value => @storeinfo.storename %>
+      </div>
+    </div>
+  <% end %>
+  <div class="row">
+    <div class="col-sm-2 col-form-label">
+      <%= f.label :Address %>
+    </div>
+    <div class="col-sm-2 col-form-label">
       <%= f.text_field :address %>
-    </p>
+    </div>
   </div>
 
-  <div>
-    <p><%= f.label :Phoneno %>
-
+  <div class="row">
+    <div class="col-sm-2 col-form-label">
+      <%= f.label :Phoneno %>
+    </div>
+    <div class="col-sm-2 col-form-label">
       <%= f.text_field :phoneno %>
-    </p>
+    </div>
   </div>
 
-  <div>
-    <p><%= f.label :Branchincharge %>
-
+  <div class="row">
+    <div class="col-sm-2 col-form-label">
+      <%= f.label :Branchincharge %>
+    </div>
+    <div class="col-sm-2 col-form-label">
       <%= f.text_field :branchincharge %>
-    </p>
+    </div>
   </div>
 
-  <div>
-    <p><%= f.label :Contactno %>
+  <div class="row">
+    <div class="col-sm-2 col-form-label">
+      <%= f.label :Contactno %>
+    </div>
+    <div class="col-sm-2 col-form-label">
       <%= f.text_field :contactno %>
-    </p>
+    </div>
   </div>
 
   <div class="actions">
     <%= f.submit %>
   </div>
 <% end %>
+</body>
+</html>
