--- a/app/views/branchinfos/index.html.erb
+++ b/app/views/branchinfos/index.html.erb
@@ -1,36 +1,58 @@
-<h1>Branches in <%= @storeinfo.storename %></h1>
+<!DOCTYPE html>
+<html>
 
-<table>
-  <tr>
-    <th></th>
-    <th>Branch details</th>
-    <th>Address</th>
-    <th>Phone No</th>
-    <th>Branch Incharge</th>
-    <th>Contact No</th>
-  </tr>
+<head>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+</head>
 
-  <% for br in @branchList %>
+<body>
+<div class ="container">
+  </br>
+  <h3 class="card-header">Branches in <%= @storeinfo.storename %></h3>
+
+  <table class="table table-striped table-bordered">
     <tr>
-      <% if current_user.admin? || br.user_id == current_user.id %>
-        <td><%= image_tag(@storeinfo.image_url(:thumb).to_s) %></td>
-        <td><%= br.branchname %></td>
-        <td><%= br.address %></td>
-        <td><%= br.phoneno %></td>
-        <td><%= br.branchincharge %></td>
-        <td><%= br.contactno %></td>
-        <td><%= link_to 'Show Products',
-                        {:controller => "productinfos", :action => "index",
-                         :branchinfo_id => br.id, :storeinfo_id => br.storeinfo_id}%></td>
-        <td><%= link_to'Edit', edit_branchinfo_path(br) %></td>
-        <td><%= link_to'Destroy', branchinfo_path(br),
-                       :confirm =>'Are you sure?',
-                       :method => :delete, data: { confirm: 'Are you sure?' } %></td>
-      <% end %>
+      <th></th>
+      <th>Branch details</th>
+      <th>Address</th>
+      <th>Phone No</th>
+      <th>Branch Incharge</th>
+      <th>Contact No</th>
     </tr>
-  <% end %>
-</table>
-<br />
 
-<%= link_to'New Branch', {:controller => "branchinfos", :action => "new", :storeinfo_id => @storeinfo.id} %>
-<%= link_to'Back to Stores', {:controller => "storeinfos", :action => "index"} %>
+    <% for br in @branchList %>
+      <tr>
+        <% if current_user.admin? || br.user_id == current_user.id %>
+          <td><%= image_tag(@storeinfo.image_url(:thumb).to_s) %></td>
+          <td><%= br.branchname %></td>
+          <td><%= br.address %></td>
+          <td><%= br.phoneno %></td>
+          <td><%= br.branchincharge %></td>
+          <td><%= br.contactno %></td>
+          <td class="btn badge badge-success"><%= link_to 'Show Products',
+                          {:controller => "productinfos", :action => "index",
+                           :branchinfo_id => br.id, :storeinfo_id => br.storeinfo_id}%></td>
+          <td class="btn badge badge-success"><%= link_to'Edit', edit_branchinfo_path(br) %></td>
+          <td class="btn badge badge-danger"><%= link_to'Destroy', branchinfo_path(br),
+                         :confirm =>'Are you sure?',
+                         :method => :delete, data: { confirm: 'Are you sure?' } %></td>
+        <% end %>
+      </tr>
+    <% end %>
+  </table>
+  <br />
+
+  <div class = "row">
+    <div class="btn alert alert-success col-sm-4" style="background-color: #eee;">
+      <%= link_to'New Branch', {:controller => "branchinfos", :action => "new", :storeinfo_id => @storeinfo.id} %>
+    </div>
+    <div class="btn alert alert-danger col-sm-4" style="background-color: #eee;">
+      <%= link_to'Back to Stores', {:controller => "storeinfos", :action => "index"} %>
+    </div>
+  </div>
+</div>
+</body>
+</html>
