--- a/app/views/productinfos/new.html.erb
+++ b/app/views/productinfos/new.html.erb
@@ -1,3 +1,25 @@
+<!DOCTYPE html>
+<html>
 
+<head>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+</head>
 
-<%= render'form'%>
+<body>
+<div class ="container">
+  </br>
+
+  <h3 class="card-header">New Product</h3>
+
+  <%= render'form'%>
+  <div class="btn alert alert-primary col-sm-1">
+    <%= link_to'Back', {:controller => "productinfos", :action => "index",
+                        :branchinfo_id => @branchinfo.id,
+                        :storeinfo_id => Storeinfo.find(@branchinfo.storeinfo_id)} %>
+  </div>
+</div>
+</body>
+</html>
