--- a/app/views/storeinfos/index.html.erb
+++ b/app/views/storeinfos/index.html.erb
@@ -1,45 +1,69 @@
-<h1>Storeinfos</h1>
+<!DOCTYPE html>
+<html>
 
-<table>
-  <thead>
-  <tr>
-    <th></th>
-    <th>Storename</th>
-    <th>Address</th>
-    <th>Phoneno</th>
-    <th>Buisnessid</th>
-    <th>Branchcount</th>
-    <th>Storeincharge</th>
-    <th>Contactno</th>
-    <th colspan="3"></th>
-  </tr>
-  </thead>
+<head>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+</head>
 
-  <tbody>
-  <% @storeinfos.each do |storeinfo| %>
+<body>
+<div class ="container">
+  </br>
+  <h3 class="card-header">Store Details</h3>
+
+  <table class="table table-striped table-bordered">
+    <thead>
     <tr>
-      <% if current_user.admin? || storeinfo.user_id == current_user.id %>
-        <td><%= image_tag(storeinfo.image_url(:thumb).to_s) %></td>
-        <td><%= storeinfo.storename %></td>
-        <td><%= storeinfo.address %></td>
-        <td><%= storeinfo.phoneno %></td>
-        <td><%= storeinfo.buisnessid %></td>
-        <td><%= storeinfo.branchcount %></td>
-        <td><%= storeinfo.storeincharge %></td>
-        <td><%= storeinfo.contactno %></td>
-        <td><%= link_to 'Show Branches',
-                        {:controller => "branchinfos", :action => "index", :storeinfo_id => storeinfo.id}%></td>
-        <td><%= link_to 'Edit', edit_storeinfo_path(storeinfo) %></td>
-        <td><%= link_to 'Destroy', storeinfo, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      <% end %>
+      <th></th>
+      <th>Store Name</th>
+      <th>Address</th>
+      <th>Phone No</th>
+      <th>Business ID</th>
+      <th>Branch Count</th>
+      <th>Store Incharge</th>
+      <th>Contact No</th>
+      <th colspan="3"></th>
     </tr>
-  <% end %>
-  </tbody>
-</table>
+    </thead>
 
-<br>
+    <tbody>
+    <% @storeinfos.each do |storeinfo| %>
+      <tr>
+        <% if current_user.admin? || storeinfo.user_id == current_user.id %>
+          <td><%= image_tag(storeinfo.image_url(:thumb).to_s) %></td>
+          <td><%= storeinfo.storename %></td>
+          <td><%= storeinfo.address %></td>
+          <td><%= storeinfo.phoneno %></td>
+          <td><%= storeinfo.buisnessid %></td>
+          <td><%= storeinfo.branchcount %></td>
+          <td><%= storeinfo.storeincharge %></td>
+          <td><%= storeinfo.contactno %></td>
+          <div class="col-sm-1">
+            <td class="btn badge badge-success"><%= link_to 'Show Branches',
+                                                            {:controller => "branchinfos", :action => "index", :storeinfo_id => storeinfo.id}%></td>
+          </div>
+          <td class="btn badge badge-success"><%= link_to 'Edit', edit_storeinfo_path(storeinfo) %></td>
+          <td class="btn badge badge-danger"><%= link_to 'Destroy', storeinfo, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <% end %>
+      </tr>
+    <% end %>
+    </tbody>
+  </table>
 
-<% if current_user.admin? %>
-  <%= link_to 'Make new Admin', {:controller => "profiles", :action => "index" } %>
-<% end %>
-<%= link_to 'New Store', new_storeinfo_path %>
+  <br>
+
+  <div class = "row">
+    <% if current_user.admin? %>
+      <div class="btn alert alert-info col-sm-4" style="background-color: #eee;">
+        <%= link_to 'Make new Admin', {:controller => "profiles", :action => "index" } %>
+      </div>
+    <% end %>
+    <div class="btn alert alert-sucess col-sm-4" style="background-color: #eee;">
+      <%= link_to 'New Store', new_storeinfo_path %>
+    </div>
+  </div>
+</div>
+</body>
+</html>
